plugins {
    id 'java'
}

group = 'aoc'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

java {
    sourceCompatibility(JavaVersion.VERSION_21)
    targetCompatibility(JavaVersion.VERSION_21)
    toolchain {
        setLanguageVersion(JavaLanguageVersion.of(21))
    }
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.9.1')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testImplementation 'org.assertj:assertj-core:3.11.1'
}

test {
    outputs.upToDateWhen { false } // do not cache tests
    useJUnitPlatform()
    testLogging {
        showStandardStreams = true
        exceptionFormat = 'full'
        events = ['failed', 'passed', 'skipped', 'standardError', 'standardOut']
        info.events = ['failed', 'passed', 'skipped', 'standardError', 'standardOut']
    }
}